--- a/html_app/login.html
+++ b/html_app/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-        <img src="images/logo.png" alt="App Logo" class="logo" />
+        <img src="" alt="App Logo" class="logo" />
         <nav>
             <a href="login.html" id="login-link" style="display: none;">Login</a>
             <a href="index.html">Home</a>
