--- a/html_app/dashboard.html
+++ b/html_app/dashboard.html
@@ -6,6 +6,8 @@
     <title>Crypto Wallet - Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Orbitron:wght@600&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </head>
 <body class="dashboard-body">
 
@@ -44,5 +46,6 @@
     </footer>
 
     <script src="dashboard.js"></script>
+
 </body>
 </html>
