--- a/html_app/login.html
+++ b/html_app/login.html
@@ -52,4 +52,6 @@
     document.querySelector('.login-card form').addEventListener('submit', function(event) {
         event.preventDefault();
         const email = this.querySelector('input[type="email"]').value;
-        const password = this.querySelector('input[type="password"]').value;    
+        const password = this.querySelector('input[type="password"]').value;
+        // Add your login logic here
+    });
